--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  a,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-title;
+  }
+
+  p,
+  span,
+  button,
+  input,
+  label {
+    @apply font-body;
+  }
+
+  .transition-linear {
+    @apply transition-all duration-300 ease-linear;
+  }
+}
