--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@
     @apply transition-all duration-300 ease-linear;
   }
 
+  .responsive-banner {
+    @apply -mt-[calc(0rem+3rem)] md:-mt-[calc(6rem+3rem)];
+  }
+
   html {
     scroll-behavior: smooth;
     max-width: 100vw;
