--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   }
 
   section {
+    /* @apply py-32 px-4 sm:py-40 md:px-12 md:pt-[12rem] md:pb-[7.5rem] lg:pt-[16rem] lg:pb-[10rem] relative z-10; */
     @apply py-20 px-4 sm:py-36 md:px-12 md:pt-[10rem] md:pb-[7.5rem] lg:pt-[12rem] lg:pb-[9rem] relative z-10;
   }
 
