--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,17 @@
     display: none;
   }
 
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    @apply border-b-2 border-logo-clr transition-[background-color] duration-[5000s] delay-0 ease-in-out;
+  }
 
 }
 
@@ -102,4 +113,11 @@
 
 .home-accommodation .slick-initialized .slick-slide {
   @apply p-2;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
 }
